--- a/concourse.yml
+++ b/concourse.yml
@@ -2,10 +2,11 @@ platform: linux
 
 image_resource:
   type: registry-image
-  source: {repository: golang}
+  source: {repository: golang:1.15}
 
 inputs:
   - name: cgrates
 run:
-  path: ./cgrates/test.sh
+  path: ./test.sh
+  dir: ./cgrates
 
