--- a/.drone.yml
+++ b/.drone.yml
@@ -2,9 +2,9 @@ kind: pipeline
 type: docker
 name: default
 
-
 steps:
-- name: test
+- name: backend
   image: golang
   commands:
-  - ./test.sh
+  - go build
+  - go test
